--- a/pra06.html
+++ b/pra06.html
@@ -4,6 +4,8 @@
     <title>INLINE CSS</title>
 </head>
 <body>
+/Aryan raj/
+/10297/
 
     <h1 style="color: blue; text-align: center;">
         HELLO Everyone
