--- a/pra07.html
+++ b/pra07.html
@@ -5,7 +5,10 @@
 
     <style>
         /* Background Image */
-        body {
+        body
+       /Aryan raj/
+       /10297/
+       {
             background-image: url('https://via.placeholder.com/1200x600');
             background-size: cover;
             background-repeat: no-repeat;
